@@ -1800,6 +1800,7 @@ SCIP_RETCODE SCIPchgVarUbNode(
  *  @pre This method can be called if @p scip is in one of the following stages:
  *       - \ref SCIP_STAGE_PROBLEM
  *       - \ref SCIP_STAGE_TRANSFORMING
+ *       - \ref SCIP_STAGE_TRANSFORMED
  *       - \ref SCIP_STAGE_PRESOLVING
  *       - \ref SCIP_STAGE_SOLVING
  *
@@ -1824,6 +1825,7 @@ SCIP_RETCODE SCIPchgVarLbGlobal(
  *  @pre This method can be called if @p scip is in one of the following stages:
  *       - \ref SCIP_STAGE_PROBLEM
  *       - \ref SCIP_STAGE_TRANSFORMING
+ *       - \ref SCIP_STAGE_TRANSFORMED
  *       - \ref SCIP_STAGE_PRESOLVING
  *       - \ref SCIP_STAGE_SOLVING
  *
@@ -1838,8 +1840,13 @@ SCIP_RETCODE SCIPchgVarUbGlobal(
 
 /** changes lazy lower bound of the variable, this is only possible if the variable is not in the LP yet
  *
- *  lazy bounds are bounds, that are enforced by constraints and the objective function; hence, these bounds do not need
- *  to be put into the LP explicitly.
+ *  Lazy bounds are bounds that are already enforced by constraints and the objective function.
+ *  Setting a lazy lower bound has the consequence that for variables which lower bound equals the lazy lower bound,
+ *  the lower bound does not need to be passed on to the LP solver.
+ *  This is especially useful in a column generation (branch-and-price) setting.
+ *
+ *  @attention If the variable has a global lower bound below lazylb, then the global lower bound is tightened to
+ *     lazylb by a call to SCIPchgVarLbGlobal().
  *
  *  @return \ref SCIP_OKAY is returned if everything worked. Otherwise a suitable error code is passed. See \ref
  *          SCIP_Retcode "SCIP_RETCODE" for a complete list of error codes.
@@ -1850,8 +1857,6 @@ SCIP_RETCODE SCIPchgVarUbGlobal(
  *       - \ref SCIP_STAGE_TRANSFORMED
  *       - \ref SCIP_STAGE_PRESOLVING
  *       - \ref SCIP_STAGE_SOLVING
- *
- *  @note lazy bounds are useful for branch-and-price since the corresponding variable bounds are not part of the LP
  */
 SCIP_EXPORT
 SCIP_RETCODE SCIPchgVarLbLazy(
@@ -1862,8 +1867,13 @@ SCIP_RETCODE SCIPchgVarLbLazy(
 
 /** changes lazy upper bound of the variable, this is only possible if the variable is not in the LP yet
  *
- *  lazy bounds are bounds, that are enforced by constraints and the objective function; hence, these bounds do not need
- *  to be put into the LP explicitly.
+ *  Lazy bounds are bounds that are already enforced by constraints and the objective function.
+ *  Setting a lazy upper bound has the consequence that for variables which upper bound equals the lazy upper bound,
+ *  the upper bound does not need to be passed on to the LP solver.
+ *  This is especially useful in a column generation (branch-and-price) setting.
+ *
+ *  @attention If the variable has a global upper bound above lazyub, then the global upper bound is tightened to
+ *     lazyub by a call to SCIPchgVarUbGlobal().
  *
  *  @return \ref SCIP_OKAY is returned if everything worked. Otherwise a suitable error code is passed. See \ref
  *          SCIP_Retcode "SCIP_RETCODE" for a complete list of error codes.
@@ -1874,8 +1884,6 @@ SCIP_RETCODE SCIPchgVarLbLazy(
  *       - \ref SCIP_STAGE_TRANSFORMED
  *       - \ref SCIP_STAGE_PRESOLVING
  *       - \ref SCIP_STAGE_SOLVING
- *
- *  @note lazy bounds are useful for branch-and-price since the corresponding variable bounds are not part of the LP
  */
 SCIP_EXPORT
 SCIP_RETCODE SCIPchgVarUbLazy(
